tests/sources/invalid/borrow/method_move_errors.fire
// Method call ownership error tests

import @firescript/std.io.println;

class Sink {
    label: string;

    fn take(value: string) -> void {
        this.label = value;
    }

    fn keep(&value: string) -> void {
        println(value);
    }
}

s: Sink = Sink("init");

owned: string = "moved";
s.take(owned);    // Move into method parameter
println(owned);   // Error: used after move  //~ ERROR FS-SEM-0001 @9

borrowed: string = "still-here";
s.keep(borrowed); // Borrow only
println(borrowed); // Should remain valid
